--- a/src/App.css
+++ b/src/App.css
@@ -499,4 +499,51 @@ body.dark-mode .modal-content button:hover {
 body.dark-mode .logo img {
   filter: drop-shadow(0 0 40px rgba(255, 255, 255, 1)); /* Maximum glow effect */
 }
+.password-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.password-container input {
+  flex: 1;
+}
+
+.eye-icon {
+  color:#280137;
+  position: absolute;
+  right: 20px;
+  cursor: pointer;
+}
+/* File Name: signup.css */
+
+.signup-container .header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.back-arrow {
+  position: absolute;
+  left: 0;
+  cursor: pointer;
+  font-size: 24px;
+  color: #007bff;
+}
+
+.back-arrow:hover {
+  color: #0056b3;
+}
+
+.dark-mode .back-arrow {
+  color: #9014ca;
+}
+
+.dark-mode .back-arrow:hover {
+  color: #a20eb0;
+}
+
+
 
