--- a/src/App.css
+++ b/src/App.css
@@ -100,13 +100,16 @@ body.dark-mode .App {
 .calendar-section {
   flex: 1;
   max-width: 500px; /* Increase the size of the calendar container */
-  display: flex;
-  flex-direction: column;
+  
   align-items: center; /* Center the calendar horizontally */
   padding-top: 20px; /* Add space at the top */
   border-radius: 8px;
   grid-column: 1/8;
   
+}
+.react-calendar__month-view__days {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr); /* Forces 7 equal columns */
 }
 
 .react-calendar__navigation {
